[package]
name = "someip-messages"
version = "0.3.1"
authors = ["ESRLabs"]
edition = "2021"

[dependencies]
byteorder = "1"
derive_builder = "0.13.0"
thiserror = "1"
url = { version ="2.2.2", optional = true }

[dev-dependencies]
hex = "0.4.3"
proptest = { version = "1", default_features = false, features = ["std"] }

[features]
default = []
